# Tactile_Vision_Integrated_Manipulation

gazebo_approach/: readme.md
gazebo_approach/FrankaSimulator_Ws/src/PandaRobot/: pick_and_place.py
gazebo_approach/FrankaSimulator_Ws/src/PandaRobot/panda_ros2_gazebo/urdf/: box.urdf  check.urdf  panda_macro.urdf copy.xacro  panda_macro.urdf.xacro  panda_macro_main.urdf.xacro  panda_macro_test.urdf.xacro
gazebo_approach/FrankaSimulator_Ws/src/ros2_actions/: CMakeLists.txt
gazebo_approach/FrankaSimulator_Ws/src/ros2_actions/scripts/: moveG_action.cpp  moveJ_action.cpp  moveJs_action.cpp  moveL_action.cpp  moveROT_action.cpp  moveRP_action.cpp  moveR_action.cpp  moveRs_action.cpp  moveXYZW_action.cpp  moveXYZ_action.cpp  moveYPR_action.cpp
gazebo_approach/FrankaSimulator_Ws/src/ros2_data/: CMakeLists.txt
gazebo_approach/FrankaSimulator_Ws/src/ros2_data/scripts/: attacher_action.py
gazebo_approach/FrankaSimulator_Ws/src/ros2_data/urdf/: box.urdf  camera1.urdf  camera2.urdf  environment.urdf  tactile_sensor.world
gazebo_approach/force_sensor_array/src/: package.xml  setup.cfg  setup.py
gazebo_approach/force_sensor_array/src/force_sensor_array/: final_node.py  grasp_state_assessment.py  heat_node.py  model_best.pth  models.py  options.py
gazebo_approach/force_sensor_array/src/launch/: tactile_plugin.launch.py
gazebo_approach/vbm_project/src/pcl/: CMakeLists.txt
gazebo_approach/vbm_project/src/pcl/src/: find_grasp_points.py  merge_cloud.cpp  transform_pointcloud.cpp  transform_pointcloud2.cpp
(+4 files in other folders)
